force-app/main/default/objects/Mosaic_Cart_Abandoners_Mock__dlm/Mosaic_Cart_Abandoners_Mock__dlm.object-meta.xml
<CustomObject>
    <label>Mosaic_Cart_Abandoners_Mock</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Mosaic_Cart_Abandoners_Mock</labelOverride>
        <masterLabel>Mosaic_Cart_Abandoners_Mock</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>