force-app/main/default/objects/Mosaic_Cart_Abandoners_Mock__dlm/fields/Browse_Products__c.field-meta.xml
<CustomField>
    <fullName>Browse_Products__c</fullName>
    <label>Browse_Products</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Browse_Products</labelOverride>
        <masterLabel>Browse_Products</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>