force-app/main/default/objects/Mosaic_Cart_Abandoners_Mock__dlm/fields/Cart_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Cart_Sessions__c</fullName>
    <label>Cart_Sessions</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Cart_Sessions</labelOverride>
        <masterLabel>Cart_Sessions</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>