force-app/main/default/objects/Mosaic_Cart_Abandoners_Mock__dlm/fields/Products_In_Cart__c.field-meta.xml
<CustomField>
    <fullName>Products_In_Cart__c</fullName>
    <label>Products_In_Cart</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Products_In_Cart</labelOverride>
        <masterLabel>Products_In_Cart</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>