force-app/main/default/objects/Mosaic_Cart_Abandoners_Mock__dlm/fields/Recovery_Priority__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Priority__c</fullName>
    <label>Recovery_Priority</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Recovery_Priority</labelOverride>
        <masterLabel>Recovery_Priority</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>