force-app/main/default/objects/Mosaic_Cart_Abandoners_Mock__dlm/fields/Total_Cart_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Cart_Value__c</fullName>
    <label>Total_Cart_Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Total_Cart_Value</labelOverride>
        <masterLabel>Total_Cart_Value</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>